# lightining_node_api

./: .env.example  Cargo.toml  README.md  diesel.toml
migrations/2025-05-26-151845_nodes/: down.sql  up.sql
migrations/2025-05-28-004406_create_nodes/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/etl/: fetch_api.rs  mod.rs
src/queries/: add_nodes.rs  get_nodes.rs  mod.rs  update_nodes.rs
