[package]
name = "lightining_node_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
diesel = { version = "2.2.0", features = ["postgres"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1.45.1", features = ["sync", "rt-multi-thread", "macros", "full"] }
serde = "1.0.219"
diesel-async = {version = "0.5.2", features = ["postgres", "bb8"] }
bb8 = "0.8"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel_migrations = "2.2.0"
